# ai-agents-course

./: supabase access code.rtf
social_media_marketer/: README.md  content_ideas.md  marketing_campaign.md  optimized_social_media_posts.md  pyproject.toml  social_media_posts.md  trend_analysis.md
social_media_marketer/src/social_media_marketer/: crew.py  main.py
social_media_marketer/src/social_media_marketer/config/: agents.yaml  tasks.yaml
