[project]
name = "social_media_marketer"
version = "0.1.0"
description = "social-media-marketer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
social_media_marketer = "social_media_marketer.main:run"
run_crew = "social_media_marketer.main:run"
train = "social_media_marketer.main:train"
replay = "social_media_marketer.main:replay"
test = "social_media_marketer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
